# AskImmigrate

./: .gitignore  README.md  SETUP.md  cli.py  embed_documents.py  pyproject.toml  requirements.txt
app/: api.py  chat_logic.py  config_loader.py  db_ingestion.py  memory.py  paths.py  streamlit_app.py  utils.py
app/config/: prompt_config.yaml
code/: db_ingestion.py  main.py  prompt_builder.py  utils.py
code/config/: prompt_config.yaml
frontend/: index.html  package-lock.json
frontend/src/: App.tsx
frontend/src/components/: ChatInterface.tsx  Header.tsx  InputArea.tsx  MessageBubble.tsx  SettingsPanel.tsx  Sidebar.tsx
frontend/src/hooks/: useChat.ts  useSettings.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
